--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 10vh;
+  height: 8vh;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -29,8 +29,8 @@
     z-index: 2;
     padding: 1rem;
     cursor: pointer;
-    width: 10vh;
-    height: 10vh;
+    width: 50px;
+    height: 8vh;
     opacity: 0;
   }
   
@@ -39,9 +39,10 @@
     top: 0;
     left: 0;
     z-index: 1;
-    width: 10vh;
-    height:10vh;
+    width: 60px;
+    height:8vh;
     padding: 1rem;
+    background: rgb(229, 235, 233);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,7 +53,7 @@
     position: relative;
     flex: none;
     width: 100%;
-    height: 7px;
+    height: 5px;
     background: black;
     display: flex;
     align-items: center;
@@ -66,15 +67,15 @@
     content: '';
     position: absolute;
     z-index: 1;
-    top: -15px;
+    top: -10px;
     width: 100%;
-    height: 7px;
+    height: 5px;
     background: inherit;
   }
   
   /* Moves Line Down */
   .hamburger > div::after {
-    top: 15px;
+    top: 10px;
   }
   
   /* Toggler Animation */
@@ -124,7 +125,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 1;
   }
   
   .menu > div {
@@ -143,7 +143,7 @@
 .menu > div > div {
     text-align: center;
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 92vh;
     opacity: 0;
     transition: opacity 0.4s ease;
   }
@@ -175,7 +175,7 @@
     right: 2vh;
     border-radius: 50%;
     width: 60px;
-    height: 10vh;
+    height: 8vh;
     text-align: center;
     justify-content: center;
   }
