--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -25,11 +25,11 @@
   .toggler {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 1vw;
     z-index: 2;
     padding: 1rem;
     cursor: pointer;
-    width: 50px;
+    width: 80px;
     height: 8vh;
     opacity: 0;
   }
@@ -37,7 +37,7 @@
   .hamburger {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 1vw ;
     z-index: 1;
     width: 80px;
     height:8vh;
