--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -1,10 +1,4 @@
 .home{
-    margin-top: 60px;
-    background-color: rgba(116, 80, 80, 0.021);
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 5rem;
+    position: absolute;
+    margin-top: 8vh;
 }
