--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -1,4 +1,15 @@
 .home{
-    position: absolute;
-    margin-top: 8vh;
+position: absolute;
+margin-top: 10vh;
+width: 100%;
+height: 25vh;
+}
+
+
+.yours-custom-class{
+    position: relative;
+    background-color: red;
+    height: 100%;
+    margin-left: 1vh;
+    margin-right: 1vh;
 }
