--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -2,14 +2,13 @@
 position: absolute;
 margin-top: 10vh;
 width: 100%;
-height: 25vh;
 }
 
 
 .yours-custom-class{
     position: relative;
     background-color: red;
-    height: 100%;
-    margin-left: 1vh;
-    margin-right: 1vh;
+    height: 20vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
