--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -9,6 +9,7 @@ width: 100%;
     position: relative;
     background-color: red;
     height: 20vh;
+    width: 20vh;
     margin-left: 1vw;
     margin-right: 1vw;
 }
