--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -7,9 +7,9 @@ width: 100%;
 
 .yours-custom-class{
     position: relative;
-    background-color: red;
+    background-color: rgb(143, 163, 146);
     height: 20vh;
-    width: 20vh;
-    margin-left: 1vw;
-    margin-right: 1vw;
+    border-color: rgb(142, 142, 145);
+    border-width: 10px;
+    border-style: solid;
 }
