--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -18,3 +18,39 @@ width: 100%;
     position: relative;
     margin-left: 1vh;;
 }
+
+
+.square-box {
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    overflow: hidden;
+    color: black;
+     border-color: rgb(23, 24, 23);
+    border-width: 10px;
+    border-style: solid;
+	
+	&:before {
+		content: "";
+		display: block;
+		padding-top: 100%;
+	}
+}
+
+.square-content {
+    position:  absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    color: white;
+	
+	div {
+	   display: table;
+	   width: 100%;
+	   height: 100%;
+	}
+	
+	span {
+		display: table-cell;
+		text-align: center;
+		vertical-align: middle;
+		color: black
+	}
+}
