--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -22,12 +22,11 @@ z-index: 0;
 
 
 .square-box {
-    background-color: rgb(255, 255, 255);
     position: relative;
-    overflow: hidden;
+    overflow-y: auto;
     color: black;
-     border-color: rgb(23, 24, 23);
-    border-width: 10px;
+    border-color: rgb(23, 24, 23);
+    border-width: 5px;
     border-style: solid;
 	
 	&:before {
@@ -41,35 +40,30 @@ z-index: 0;
     position:  absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     color: white;
-	
-	div {
-	   display: table;
-	   width: 100%;
-	   height: 100%;
-	}
-	
-	span {
-		display: table-cell;
-		text-align: center;
-		vertical-align: middle;
-		color: black
-	}
+    width: 100%;
+    height: 100%;
+}
+
+.square-content img{
+    width: 100%;
+    height: 100%;
 }
 
 .video-category{
     width: 100%;
-    overflow: hidden;
+    overflow-y: auto;
+    padding-right: 18px;
 }
 
 .photo-category{
     width: 100%;
-    overflow: hidden;
+    overflow-y: auto;
+    padding-right: 18px;
 }
 .category{
     width: 100%;
-    overflow: hidden;
+    overflow-y: auto;
     position: absolute;
-    margin-right: 18px;
 }
 
 .show-more-category{
