--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -25,7 +25,7 @@ z-index: 0;
     position: relative;
     overflow-y: auto;
     color: black;
-    border-color: rgb(23, 24, 23);
+    border-color: black;
     border-width: 5px;
     border-style: solid;
 	
@@ -40,13 +40,27 @@ z-index: 0;
     position:  absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     color: white;
+    background-color: gray;
     width: 100%;
     height: 100%;
 }
+.square-content div{
+    position:  relative;
+}
+
 
 .square-content img{
     width: 100%;
     height: 100%;
+    opacity: 0.5;
+}
+
+.square-content button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: black;
+    transform: translate(-50%, -50%);
 }
 
 .video-category{
