--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -40,7 +40,7 @@ z-index: 0;
     position:  absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     color: white;
-    background-color: gray;
+    background-color: rgb(229, 235, 233);
     width: 100%;
     height: 100%;
 }
@@ -52,7 +52,7 @@ z-index: 0;
 .square-content img{
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .square-content button{
@@ -82,4 +82,9 @@ z-index: 0;
 
 .show-more-category{
     width: 100%;
+}
+
+.button-class{
+    background-color: rgb(86, 137, 214);
+    color: white;
 }
