--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -3,6 +3,7 @@ position: absolute;
 margin-top: 10vh;
 width: 100%;
 z-index: 0;
+height: auto;
 }
 
 
@@ -82,9 +83,19 @@ z-index: 0;
 
 .show-more-category{
     width: 100%;
-}
+    overflow-y: auto;
+    position: absolute;}
 
 .button-class{
     background-color: rgb(86, 137, 214);
     color: white;
+}
+
+.sub_category{
+    display: block;
+    min-height: 1px;
+    width: 100%;
+    border: 1px solid red;
+    overflow: auto;
+    height: auto;
 }
