--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 8vh;
+  height: 75px;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -12,16 +12,7 @@
   top:0;
   bottom: 0;
 }
-  
-  /* MENU STYLES */
-  // .menu-wrap {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   z-index: 1;
-  //   background-color: red;
-  // }
-  
+
   .toggler {
     position: absolute;
     top: 0;
