--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 75px;
+  height: 10%;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
