--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -1,8 +1,8 @@
 .header{
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 10%;
+  width: 100vw;
+  height: 10vh;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -18,10 +18,10 @@
     top: 0;
     left: 1vw;
     z-index: 2;
-    padding: 1rem;
+    // padding: 1rem;
     cursor: pointer;
-    width: 80px;
-    height: 8vh;
+    width: 10vw;
+    height: 10vh;
     opacity: 0;
   }
   
@@ -30,9 +30,9 @@
     top: 0;
     left: 1vw ;
     z-index: 1;
-    width: 80px;
-    height:8vh;
-    padding: 1rem;
+    width: 10vw;
+    height:10vh;
+    // padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
