--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -30,7 +30,7 @@
     top: 0;
     left: 1vw ;
     z-index: 1;
-    width: 10vw;
+    width: 10vh;
     height:10vh;
     // padding: 1rem;
     display: flex;
