--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -20,8 +20,8 @@
     z-index: 2;
     // padding: 1rem;
     cursor: pointer;
-    width: 10vw;
-    height: 10vh;
+    width: 80px;
+    height: 80px;
     opacity: 0;
   }
   
@@ -30,8 +30,8 @@
     top: 0;
     left: 1vw ;
     z-index: 1;
-    width: 10vh;
-    height:10vh;
+    width: 80px;
+    height:80px;
     // padding: 1rem;
     display: flex;
     align-items: center;
