--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -12,7 +12,18 @@
   top:0;
   bottom: 0;
 }
-  
+
+@media(max-width: 480px){
+.header{
+  height: 8vh;
+}
+}
+
+@media (max-width: 768px){
+  .header{
+    height: 70px;
+  }
+}
 
   
   .toggler {
