--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 80px;
+  height: 90px;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -12,19 +12,6 @@
   top:0;
   bottom: 0;
 }
-
-@media screen and (min-width: 320px){
-.header{
-  height: 8vh;
-}
-}
-
-@media screen and (min-width:321px) and (max-width:768px){
-  .header{
-    height: 70px;
-  }
-}
-
   
   .toggler {
     position: absolute;
@@ -188,3 +175,34 @@
     vertical-align: middle;
     text-align: center;
   }
+
+
+  @media screen and (max-width: 500px){
+    .header{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 8vh;
+      background-color: rgb(229, 235, 233);
+      align-items: center;
+      text-align: center;
+      position: fixed;
+      right: 0;
+      left: 0;
+      top:0;
+      bottom: 0;
+    }
+    
+    }
+    
+    @media screen and (min-width:501px){
+    .toggler{
+      z-index: 0;
+    }
+    .logo{
+      left: 2vh;
+    }
+    .hamburger{
+      opacity: 0;
+    }
+    }
