--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 90px;
+  height: 80px;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -177,7 +177,7 @@
   }
 
 
-  @media screen and (max-width: 500px){
+  @media (max-width: 500px){
     .header{
       display: flex;
       justify-content: center;
@@ -195,7 +195,7 @@
     
     }
     
-    @media screen and (min-width:501px){
+    @media (min-width:501px){
     .toggler{
       z-index: 0;
     }
