--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -176,26 +176,8 @@
     text-align: center;
   }
 
-
-  @media (max-width: 500px){
-    .header{
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      height: 8vh;
-      background-color: rgb(229, 235, 233);
-      align-items: center;
-      text-align: center;
-      position: fixed;
-      right: 0;
-      left: 0;
-      top:0;
-      bottom: 0;
-    }
     
-    }
-    
-    @media (min-width:501px){
+    @media (min-width:601px){
     .toggler{
       z-index: 0;
     }
@@ -206,3 +188,21 @@
       opacity: 0;
     }
     }
+
+    @media screen and (max-width: 600px){
+      .header{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 8vh;
+        background-color: rgb(229, 235, 233);
+        align-items: center;
+        text-align: center;
+        position: fixed;
+        right: 0;
+        left: 0;
+        top:0;
+        bottom: 0;
+      }
+      
+      }
