--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 80px;
+  height: 70px;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -11,6 +11,7 @@
   left: 0;
   top:0;
   bottom: 0;
+  z-index: 100;
 }
   
   .toggler {
@@ -146,6 +147,29 @@
   }
   
 
+  .horizontal-menu{
+    visibility: visible;
+    display: flex;
+    position: absolute;
+    right: 8vh;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width:auto;
+  }
+
+  .horizontal-menu ul li{
+    display: inline;
+    list-style-type: none;
+    padding-right: 30px;
+    font-size: 1.25rem;
+  }
+
+  .horizontal-menu ul{
+    text-align: center;
+  }
+
   .link{
     color: white;
     text-decoration: none;
@@ -165,7 +189,7 @@
     right: 2vh;
     border-radius: 50%;
     width: 60px;
-    height: 8vh;
+    height: 70px;
     text-align: center;
     justify-content: center;
   }
