--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -134,7 +134,7 @@
 .menu > div > div {
     text-align: center;
     max-width: 100vw;
-    max-height: 92vh;
+    max-height: 100vh;
     opacity: 0;
     transition: opacity 0.4s ease;
   }
@@ -164,6 +164,7 @@
     list-style-type: none;
     padding-right: 30px;
     font-size: 1.25rem;
+    color: black;
   }
 
   .horizontal-menu ul{
@@ -206,10 +207,14 @@
       z-index: 0;
     }
     .logo{
+      top:0;
       left: 2vh;
     }
     .hamburger{
       opacity: 0;
+    }
+    .link{
+      color: black;
     }
     
     }
