--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -7,11 +7,11 @@
   align-items: center;
   text-align: center;
   position: fixed;
-  right: 0;
   left: 0;
   top:0;
   bottom: 0;
   z-index: 100;
+  margin-right: 18px;
 }
   
   .toggler {
@@ -122,7 +122,7 @@
     background: var(--overlay-color);
     border-radius: 50%;
     width: 200vw;
-    height: 200vw;
+    height: 200vh;
     display: flex;
     flex: none;
     align-items: center;
@@ -151,7 +151,7 @@
     visibility: visible;
     display: flex;
     position: absolute;
-    right: 8vh;
+    right: 5vh;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -162,7 +162,7 @@
   .horizontal-menu ul li{
     display: inline;
     list-style-type: none;
-    padding-right: 30px;
+    padding-right: 2vw;
     font-size: 1.25rem;
     color: black;
   }
@@ -181,6 +181,7 @@
     position: absolute;
     font-size: 2.5rem;
     color: black;
+    left:35vw;
   }
 
   .logo{
@@ -201,7 +202,7 @@
   }
 
     
-    @media screen and (min-device-width:601px){
+    @media screen and (min-device-width:701px){
     .toggler{
       z-index: 0;
     }
@@ -217,7 +218,7 @@
     
     }
 
-    @media screen and (max-device-width: 600px){
+    @media screen and (max-device-width: 700px){
       .header{
         display: flex;
         justify-content: center;
