--- a/client/scss/components/components/sub_categories.scss
+++ b/client/scss/components/components/sub_categories.scss
@@ -70,3 +70,17 @@
     overflow-y: auto;
     position: absolute;
 }
+
+.back button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: black;
+    transform: translate(-50%, -50%); 
+    border-radius: 3px;
+    width: 50%;
+    height: 20%;
+    text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+
+}
