--- a/client/scss/components/components/sub_categories.scss
+++ b/client/scss/components/components/sub_categories.scss
@@ -4,6 +4,7 @@
     grid-gap: 20px;
     align-items: stretch;
     margin-left: 20px;
+    margin-right    : 20px;
     }
   
   .grid > article > .square-box > .square-content div {
@@ -72,15 +73,25 @@
 }
 
 .back button{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
     color: black;
     transform: translate(-50%, -50%); 
     border-radius: 3px;
-    width: 50%;
-    height: 20%;
     text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
     background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+    margin-left: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
 
+}
+.back{
+    position: relative;
+    margin-left: 30px;
+
+}
+
+.category-name{
+    position: relative;
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
