--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -24,6 +24,7 @@
     background-color: white;
     padding: 1rem 1.5rem;
     width: 80%;
+    height: auto;
     border-radius: 0.5rem;
     z-index: 1000000;
 }
