--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -1,15 +1,13 @@
 .sub-category-item-display{
-    position: relative;
-    margin-left: 20px;
-    margin-bottom: 20px;
+
 }
 
 .modal {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
@@ -19,17 +17,9 @@
     justify-content: center;
 }
 .modal-content {
-    position: fixed;
     top:0;
     left:0;
     right:0;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    // background-color: white;
-    // padding: 1rem 1.5rem;
-    // width: 24rem;
-    // border-radius: 0.5rem;
     margin-top: 101px;
     margin-left: 50px;
     margin-right: 50px;
