--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -13,21 +13,24 @@
     visibility: hidden;
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-    display: flex;
-    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+    z-index: 10000;
 }
 .modal-content {
-    top:0;
-    left:0;
-    right:0;
-    margin-top: 101px;
-    margin-left: 50px;
-    margin-right: 50px;
-
+    // top:0;
+    // left:0;
+    // right:0;
+    margin-top: 100px;
+    margin-left: 20vw;
+    margin-right: 50vw;
+    position: relative;
+    margin-bottom: 60vw;
+    height: 80%;
 }
 .modal-content img{
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .close-button {
@@ -47,4 +50,14 @@
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-buttons {
+    margin-top: 100px;
+    margin-left: 70vw;
+    margin-right: 10vw;
+    position: relative;
+    margin-bottom: 60vw;
+    height: 80%;
+    color: red;
 }
