--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -8,7 +8,8 @@
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    // background-color: rgba(0, 0, 0, 0.5);
+    background-color: red;
     opacity: 0;
     visibility: hidden;
     transform: scale(1.1);
@@ -16,17 +17,16 @@
     align-items: center;
     max-height: 100vh;
     z-index: 10000;
+    display:flex; 
+}
+
+.modal-buttons {
+    margin: auto;
+    background-color: blue;
 }
 .modal-content {
-    // top:0;
-    // left:0;
-    // right:0;
-    margin-top: 100px;
-    margin-left: 20vw;
-    margin-right: 50vw;
-    position: relative;
-    margin-bottom: 60vw;
-    height: 80%;
+    margin:auto;
+    background-color: blue;
 }
 .modal-content img{
     width: 100%;
@@ -52,12 +52,82 @@
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
-.modal-buttons {
-    margin-top: 100px;
-    margin-left: 70vw;
-    margin-right: 10vw;
+
+.square-box {
     position: relative;
-    margin-bottom: 60vw;
-    height: 80%;
-    color: red;
+    color: rgb(168, 156, 156);
+    border-color: black;
+    border-width: 5px;
+    border-style: solid;
+	
+	&:before {
+		content: "";
+		display: block;
+		padding-top: 100%;
+	}
+}
+
+.square-content {
+    position:  absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    color: white;
+    background-color: rgb(229, 235, 233);
+    width: 100%;
+    height: 100%;
+}
+.square-content div{
+    position:  relative;
+}
+
+
+.square-content img{
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+
+.square-content button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: black;
+    transform: translate(-50%, -50%); 
+    border-radius: 3px;
+    width: 50%;
+    height: 20%;
+    text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+
+}
+
+.outer{
+    display:flex; 
+    position:absolute;
+    top:0; 
+    bottom:0;
+    right:0;
+    left:0; 
+    background-color: blue;
+}
+
+.inner{
+    margin:auto;
+    background-color: green;
+
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: yellow;
+    text-align: center;
+}
+
+.box {
+   background-color: #AAAAAA;
+   width: 100vmin;
+   height: 100vmin;
+   margin: 0 auto;
 }
