--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -17,7 +17,8 @@
     align-items: center;
     max-height: 100vh;
     z-index: 10000;
-    display:flex; 
+    display: flex;
+    justify-content: center;
 }
 
 .modal-buttons {
@@ -123,6 +124,8 @@
     box-sizing: border-box;
     background-color: yellow;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .box {
