--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -158,6 +158,8 @@
     padding: 1rem 1.5rem;
     width: 24rem;
     border-radius: 0.5rem;
+    width:500px;
+    height: 500px;
 }
 .close-button {
     float: right;
