--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -154,7 +154,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    // background-color: white;
     padding: 1rem 1.5rem;
     width: 24rem;
     border-radius: 0.5rem;
@@ -162,13 +162,14 @@
     height: 500px;
 }
 .close-button {
-    float: right;
     width: 1.5rem;
+    height: 1.5rem;
     line-height: 1.5rem;
     text-align: center;
     cursor: pointer;
     border-radius: 0.25rem;
     background-color: lightgray;
+    
 }
 .close-button:hover {
     background-color: darkgray;
@@ -178,4 +179,33 @@
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.content{
+    width: 100%;
+    height: 90%;
+}
+
+.social-media-share{
+    height: 80%; 
+    width:40px;
+}
+
+.content-control{
+    height:10%;
+    display: flex;
+    justify-content: space-between;
+}
+.share{
+    width: 100%;
+    height: 100%;
+}
+
+.download{
+    color: black;
+    border-radius: 3px;
+    width:100px;
+    height: 80%;
+    text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    background: linear-gradient(to right, rgba(227, 233, 226, 0.3),rgba(235, 228, 228, 0.3),rgba(226, 219, 219, 0.3));
 }
