--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -3,6 +3,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" >
+
 
     <title>Test</title>
     <base href="/" />
