--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -158,12 +158,12 @@
     padding: 1rem 1.5rem;
     width: 24rem;
     border-radius: 0.5rem;
-    width:500px;
-    height: 500px;
+    width:50vw;
+    height: 80vh;
 }
 .close-button {
+    float: right;
     width: 1.5rem;
-    height: 1.5rem;
     line-height: 1.5rem;
     text-align: center;
     cursor: pointer;
@@ -188,13 +188,24 @@
 
 .social-media-share{
     height: 80%; 
-    width:40px;
+    width:45px;
 }
 
-.content-control{
+.content-control-upper{
     height:10%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+.content-control-lower{
+    position: relative;
+    margin-right: 38vh;
+    margin-left: 38vh;
+    margin-top: 3vh;
+    height:10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .share{
     width: 100%;
@@ -202,10 +213,10 @@
 }
 
 .download{
-    color: black;
+    color: white;
     border-radius: 3px;
     width:100px;
     height: 80%;
     text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-    background: linear-gradient(to right, rgba(227, 233, 226, 0.3),rgba(235, 228, 228, 0.3),rgba(226, 219, 219, 0.3));
+    background: linear-gradient(to right, rgba(142, 26, 209, 0.5),rgba(49, 21, 207, 0.5),rgba(27, 43, 214, 0.5));
 }
