--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -252,8 +252,9 @@
     .download{
         color: white;
         border-radius: 3px;
-        width:130px;
+        width:170px;
         height: 80%;
+        font-size: 30px;
         text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
         background: linear-gradient(to right, rgba(142, 26, 209, 0.5),rgba(49, 21, 207, 0.5),rgba(27, 43, 214, 0.5));
     }
