--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -169,6 +169,7 @@
     cursor: pointer;
     border-radius: 0.25rem;
     background-color: lightgray;
+    display: block;
     
 }
 .close-button:hover {
@@ -184,6 +185,13 @@
 .content{
     width: 100%;
     height: 90%;
+}
+
+.youtube_content{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
 }
 
 .social-media-share{
@@ -247,7 +255,7 @@
     }
     .social-media-share{
         height: 80%; 
-        width:70px;
+        width:75px;
     }
     .download{
         color: white;
