--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -4,8 +4,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" >
-
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <base href="/" />
 </head>
