--- a/client/scss/components/components/category_items.scss
+++ b/client/scss/components/components/category_items.scss
@@ -1,26 +1,23 @@
 .category_items{
-
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 4vh;
+    overflow-y: hidden ;
 }
 
 .category-name{
     position: relative;
-    margin-left: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
+    font-size: 1rem;
 }
 
-.horozontal-categories{
+.category-name h1 {
+    text-transform: capitalize;
+  }
+
+.horozontal-categories{ 
     position: relative;
-    margin-left: 20px;
-    margin-right: 20px;
     display: flex;
-    // border: black 5px solid;
-
-}
-
-.video-category{
-}
-
-.photo-category{
 }
 
 .square-box {
@@ -49,7 +46,6 @@
     position:  relative;
 }
 
-
 .square-content img{
     width: 100%;
     height: 100%;
@@ -68,12 +64,4 @@
     text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
     background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
 
-}
-
-.square-content div div{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    color: black;
-    transform: translate(-50%, -50%);
 }
