--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -1,8 +1,8 @@
 .header{
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 70px;
+  width: 100vw;
+  height: 11vh;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -11,7 +11,6 @@
   top:0;
   bottom: 0;
   z-index: 100;
-  margin-right: 18px;
 }
   
   .toggler {
@@ -151,7 +150,7 @@
     visibility: visible;
     display: flex;
     position: absolute;
-    right: 5vh;
+    right: 20px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -179,7 +178,7 @@
 
   .header-text{
     position: absolute;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: black;
     left:35vw;
   }
@@ -187,10 +186,10 @@
   .logo{
     position: absolute;
     display: table;
-    right: 2vh;
+    right: 1vw;
     border-radius: 50%;
-    width: 60px;
-    height: 70px;
+    width: 7vw;
+    height: 9vh;
     text-align: center;
     justify-content: center;
   }
@@ -202,12 +201,12 @@
   }
 
     
-    @media screen and (min-device-width:701px){
+    @media screen and (min-width:960px){
     .toggler{
       z-index: 0;
     }
     .logo{
-      left: 2vh;
+      left: 0vw;
     }
     .hamburger{
       opacity: 0;
@@ -218,7 +217,7 @@
     
     }
 
-    @media screen and (max-device-width: 700px){
+    @media screen and (max-width:959px){
       .header{
         display: flex;
         justify-content: center;
