--- a/client/scss/components/components/sub_categories.scss
+++ b/client/scss/components/components/sub_categories.scss
@@ -1,10 +1,15 @@
+.show-more-category{
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 4vh;
+  overflow-y: hidden ;
+}
+
 .grid {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0px;
     align-items: stretch;
-    margin-left: 20px;
-    margin-right    : 20px;
     }
   
   .grid > article > .square-box > .square-content div {
@@ -16,82 +21,33 @@
   .grid > article > .square-box > .square-content div img {
     width: 100%;
   }
-  
-  
-  .text {
-    padding: 0 20px 20px;
-  }
-  
-  .text > h3{
-    text-transform: uppercase;
-  }
-  
-  .text > button {
-    background: linear-gradient(to right, #f030a7, #f0308d, #f03061);
-    border-radius: 3px;
-    border: 0;
+
+.back {
+    float: right;
     color: white;
-    padding: 10px;
-    width: 100%;
-    font-weight: 600;
     text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-    text-transform: uppercase;
-  }
-  
-  
-  @media screen and (max-device-width: 700px){
-    .grid{
-      grid-template-columns: repeat(3, 1fr);
-      margin: 0;
-    }
-  
-    .grid > article{
-      text-align: center;
-    }
-  }
-
-
-//   .sub_category{
-//     display: block;
-//     width: 100%;
-//     position: relative;
-//     margin-left: 20px;
-//     margin-bottom: 20px;
-// }
-
-// .sub_category{
-//     margin-left: 20px;
-//     margin-bottom: 20px;
-//     display: flex;
-//     width: 100%;
-// }
-
-.show-more-category{
-    width: 100%;
-    overflow-y: auto;
-    position: absolute;
+    color: black;
+    background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+    position: relative;
+    right: 0vw;
+    width: 70px;
+    height: 40px;
 }
 
 .back button{
-    position: relative;
-    color: black;
-    transform: translate(-50%, -50%); 
-    border-radius: 3px;
-    text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-    background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
-    margin-left: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-
-}
-.back{
-    position: relative;
-    margin-left: 30px;
-
+  display:block;
+  width: 100%;
+  height: 100%;
 }
 
-.category-name{
-    position: relative;
-    margin-left: 20px;
-    margin-bottom: 20px;
+
+@media screen and (max-width: 959px){
+  .grid{
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0;
+  }
+
+  .grid > article{
+    text-align: center;
+  }
 }
