--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -1,141 +1,9 @@
 .sub-category-item-display{
-
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 4vh;
+    overflow-y: hidden ;
 }
-
-// .modal {
-//     position: fixed;
-//     left: 0;
-//     top: 0;
-//     right: 0;
-//     bottom: 0;
-//     // background-color: rgba(0, 0, 0, 0.5);
-//     background-color: red;
-//     opacity: 0;
-//     visibility: hidden;
-//     transform: scale(1.1);
-//     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-//     align-items: center;
-//     max-height: 100vh;
-//     z-index: 10000;
-//     display: flex;
-//     justify-content: center;
-// }
-
-// .modal-buttons {
-//     margin: auto;
-//     background-color: blue;
-// }
-// .modal-content {
-//     margin:auto;
-//     background-color: blue;
-// }
-// .modal-content img{
-//     width: 100%;
-//     height: 100%;
-// }
-
-// .close-button {
-//     float: right;
-//     width: 1.5rem;
-//     line-height: 1.5rem;
-//     text-align: center;
-//     cursor: pointer;
-//     border-radius: 0.25rem;
-//     background-color: lightgray;
-// }
-// .close-button:hover {
-//     background-color: darkgray;
-// }
-// .show-modal {
-//     opacity: 1;
-//     visibility: visible;
-//     transform: scale(1.0);
-//     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-// }
-
-
-// .square-box {
-//     position: relative;
-//     color: rgb(168, 156, 156);
-//     border-color: black;
-//     border-width: 5px;
-//     border-style: solid;
-	
-// 	&:before {
-// 		content: "";
-// 		display: block;
-// 		padding-top: 100%;
-// 	}
-// }
-
-// .square-content {
-//     position:  absolute;
-//     top: 0; left: 0; bottom: 0; right: 0;
-//     color: white;
-//     background-color: rgb(229, 235, 233);
-//     width: 100%;
-//     height: 100%;
-// }
-// .square-content div{
-//     position:  relative;
-// }
-
-
-// .square-content img{
-//     width: 100%;
-//     height: 100%;
-//     opacity: 1;
-// }
-
-// .square-content button{
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     color: black;
-//     transform: translate(-50%, -50%); 
-//     border-radius: 3px;
-//     width: 50%;
-//     height: 20%;
-//     text-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-//     background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
-
-// }
-
-// .outer{
-//     display:flex; 
-//     position:absolute;
-//     top:0; 
-//     bottom:0;
-//     right:0;
-//     left:0; 
-//     background-color: blue;
-// }
-
-// .inner{
-//     margin:auto;
-//     background-color: green;
-
-// }
-
-// .container {
-//     width: 100%;
-//     height: 100%;
-//     padding: 0;
-//     box-sizing: border-box;
-//     background-color: yellow;
-//     text-align: center;
-//     display: flex;
-//     justify-content: center;
-// }
-
-// .box {
-//    background-color: #AAAAAA;
-//    width: 100vmin;
-//    height: 100vmin;
-//    margin: 0 auto;
-// }
-
-
 
 .modal {
     position: fixed;
@@ -168,9 +36,8 @@
     text-align: center;
     cursor: pointer;
     border-radius: 0.25rem;
-    background-color: lightgray;
+    background-color: white;
     display: block;
-    
 }
 .close-button:hover {
     background-color: darkgray;
@@ -207,8 +74,8 @@
 }
 .content-control-lower{
     position: relative;
-    margin-right: 15vw;
-    margin-left: 15vw;
+    margin-right: 14vw;
+    margin-left: 14vw;
     margin-top: 3vh;
     height:10%;
     display: flex;
