--- a/client/scss/components/components/home.scss
+++ b/client/scss/components/components/home.scss
@@ -1,5 +1,10 @@
 .home{
-margin-top: 16vh;
-width: 100vw;
+margin-top: 115px;
 z-index: 1;
 }
+
+@media screen and (max-width:959px){
+    .home{
+        margin-top: 80px;
+    }
+  }
