--- a/client/scss/components/components/category_items.scss
+++ b/client/scss/components/components/category_items.scss
@@ -65,3 +65,24 @@
     background: linear-gradient(to right, rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3));
 
 }
+
+
+
+@media screen and (max-width:959px){
+    .category_items{
+        padding-left:5px;
+        padding-right: 5px;
+        margin-top: 10vh;
+        overflow-y: hidden ;
+    }
+
+    .category-name{
+        position: relative;
+        margin-bottom: 2vh;
+        font-size: 0.7rem;
+    }
+
+    .square-content button{
+        width: 80%;
+    }
+  }
