--- a/client/scss/components/components/header.scss
+++ b/client/scss/components/components/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 11vh;
+  height: 80px;
   background-color: rgb(229, 235, 233);
   align-items: center;
   text-align: center;
@@ -12,7 +12,7 @@
   bottom: 0;
   z-index: 100;
 }
-  
+
   .toggler {
     position: absolute;
     top: 0;
@@ -20,7 +20,7 @@
     z-index: 2;
     padding: 1rem;
     cursor: pointer;
-    width: 80px;
+    width: 60px;
     height: 8vh;
     opacity: 0;
   }
@@ -30,8 +30,8 @@
     top: 0;
     left: 1vw ;
     z-index: 1;
-    width: 80px;
-    height:8vh;
+    width: 60px;
+    height: 8vh;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -43,7 +43,7 @@
     position: relative;
     flex: none;
     width: 100%;
-    height: 5px;
+    height: 3px;
     background: black;
     display: flex;
     align-items: center;
@@ -57,15 +57,15 @@
     content: '';
     position: absolute;
     z-index: 1;
-    top: -15px;
+    top: -11px;
     width: 100%;
-    height: 5px;
+    height: 3px;
     background: inherit;
   }
   
   /* Moves Line Down */
   .hamburger > div::after {
-    top: 15px;
+    top: 11px;
   }
   
   /* Toggler Animation */
@@ -178,9 +178,9 @@
 
   .header-text{
     position: absolute;
-    font-size: 2rem;
+    font-size: 2.2rem;
     color: black;
-    left:35vw;
+    left:calc(100% - 70%);
   }
 
   .logo{
@@ -234,5 +234,16 @@
       }
       .horizontal-menu{
         visibility: hidden;
+      }
+      .header-text{
+        position: absolute;
+        font-size: 1.5rem;
+        color: black;
+        left:calc(100% - 73%);
+      }
+      .logo{
+        width: 9vw;
+        height: 7vh;
+        right: 2vw;
       }
     }
