--- a/client/scss/components/components/sub_category_item_display.scss
+++ b/client/scss/components/components/sub_category_item_display.scss
@@ -108,7 +108,7 @@
         width: 24rem;
         border-radius: 0.5rem;
         width: 90vw;
-        height: 60vh;
+        height: 90vw;
     }
     .content-control-lower{
         position: relative;
